--- a/Vanrise/Code/Vanrise.Web/Client/Javascripts/Services/APIServices/ReenterPasswordModal.html
+++ b/Vanrise/Code/Vanrise.Web/Client/Javascripts/Services/APIServices/ReenterPasswordModal.html
@@ -4,10 +4,10 @@
         <vr-modalbody width="'30%'">
             <vr-row>
                 <vr-columns colnum="6">
-                    <vr-textbox value="email" label="Email" type="text" vr-disabled="true"></vr-textbox>
+                    <vr-textbox value="email" label="Email" type="text" vr-disabled="true" ></vr-textbox>
                 </vr-columns>
                 <vr-columns colnum="6">
-                    <vr-textbox value="password" label="Password" type="password" isrequired></vr-textbox>
+                    <vr-textbox value="password" label="Password" type="password" isrequired setfocus></vr-textbox>
                 </vr-columns>
             </vr-row>
         </vr-modalbody>
